--- a/search/search.component.html
+++ b/search/search.component.html
@@ -1,7 +1,7 @@
         <form class="example-form">
           <mat-form-field class="example-full-width">
             <input matInput
-                   placeholder="How can we help you ?"
+                   placeholder="How can we help you Malka commit?"
                    aria-label="Category"
                    [matAutocomplete]="auto"
                    [formControl]="categoryCtrl">
