malka search & my requests

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,10 +5,10 @@
     <span class="spacer"></span>
     <ul>
       <li>
-        <a mat-button routerLink="/itemsCategory" routerLinkActive="mat-accent">categories</a>
+        <a mat-button routerLink="/itemCategory" routerLinkActive="mat-accent">categories</a>
       </li>
       <li>
-          <a mat-button routerLink="/myRequest" routerLinkActive="mat-accent">
+          <a mat-button [routerLink]="['/myRequests',  userId]" routerLinkActive="mat-accent">
             <span *ngIf="requestCounter==0">my Requests</span>
             <span *ngIf="requestCounter>0" matBadge="{{requestCounter}}" matBadgeOverlap="false" matBadgeColor="accent">my Requests</span></a>
         </li>
