--- a/src/app/item/my-request/my-request.component.css
+++ b/src/app/item/my-request/my-request.component.css
@@ -1,3 +1,9 @@
 table {
-    width: 100%;
+    width: 100%; 
+  }
+  mat-row{
+    cursor: pointer;
+  }
+  .mat-elevation-z8 {
+    margin: 30px;
   }
