--- a/src/app/item/my-request/my-request.component.html
+++ b/src/app/item/my-request/my-request.component.html
@@ -1,37 +1,25 @@
-<mat-card class="example-card">
-  <mat-card-header>
-    <div mat-card-avatar class="example-header-image"></div>
-    <mat-card-title>My Requests</mat-card-title>
-  </mat-card-header>
+    <p>My Requests</p>
     <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-      <!-- Position Column -->
       <ng-container matColumnDef="name">
         <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
         <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
       </ng-container>   
-    
-      <!-- Name Column -->
       <ng-container matColumnDef="description">
         <mat-header-cell *matHeaderCellDef> Description </mat-header-cell>
         <mat-cell *matCellDef="let element"> {{element.description}} </mat-cell>
       </ng-container>
-    
-      <!-- Weight Column -->
       <ng-container matColumnDef="create">
         <mat-header-cell *matHeaderCellDef> Create </mat-header-cell>
         <mat-cell *matCellDef="let element"> {{element.create}} </mat-cell>
       </ng-container>
-    
-      <!-- Symbol Column -->
       <ng-container matColumnDef="status">
         <mat-header-cell *matHeaderCellDef> Status </mat-header-cell>
         <mat-cell *matCellDef="let element"> {{element.status}} </mat-cell>
       </ng-container>
-    
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;" (click)="expandRequest(row.sys_id)">
+      </mat-row>
     </table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+    <mat-paginator [pageSizeOptions]="pageSizeOptions"></mat-paginator>
 </div>
-</mat-card>
