--- a/src/app/item/my-request/my-request.component.html
+++ b/src/app/item/my-request/my-request.component.html
@@ -30,7 +30,7 @@
       </ng-container>
     
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;" (click)="expandRequest(row.sys_id)"></mat-row>
     </table>
     <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </div>
