--- a/src/app/item/my-request/my-request.component.html
+++ b/src/app/item/my-request/my-request.component.html
@@ -1,6 +1,6 @@
 <mat-card class="example-card">
   <mat-card-header>
-    <div mat-card-avatar class="example-header-image"></div>
+    <!--<div mat-card-avatar class="example-header-image"></div>-->
     <mat-card-title>My Requests</mat-card-title>
   </mat-card-header>
     <div class="mat-elevation-z8">
@@ -23,7 +23,7 @@
         <mat-cell *matCellDef="let element"> {{element.create}} </mat-cell>
       </ng-container>
     
-      <!-- Symbol Column -->
+      <!-- Symbol Column  (click)="expandRequest(row.sys_id)"-->
       <ng-container matColumnDef="status">
         <mat-header-cell *matHeaderCellDef> Status </mat-header-cell>
         <mat-cell *matCellDef="let element"> {{element.status}} </mat-cell>
@@ -32,6 +32,10 @@
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
       <mat-row *matRowDef="let row; columns: displayedColumns;" (click)="expandRequest(row.sys_id)"></mat-row>
     </table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+    <!--<mat-paginator
+      [pageSize]="5"
+      [pageSizeOptions]="pageSizeOptions"></mat-paginator> -->
+      <mat-paginator #paginator [pageIndex]="1" [pageSize]="5" [pageSizeOptions]="[5, 10, 20]" [showFirstLastButtons]="true" [length]="requestCount"></mat-paginator>
 </div>
 </mat-card>
+<!--(page)="onChangePage($event)" -->
