rachel tidy project

--- a/src/app/component/homePage/homePage.component.css
+++ b/src/app/component/homePage/homePage.component.css
@@ -1,4 +1,4 @@
-    .example-form {
+    /* .example-form {
         min-width: 150px;
         max-width: 500px;
         width: 100%;
@@ -16,12 +16,7 @@
         margin-right: 0;
         margin-left: 8px;
     }
-    .row.image{
-        background-image: url(../../assets/katarheroimage.png);
-        height: 468px;
-        width: 1707px;
-        margin-top: -75px;
-    }
+  
     .row.categories{
         width: 65%;
         padding-left: 17.5%;
@@ -61,4 +56,4 @@
         padding-left: 33%;
     }
     
-    
+     */
