--- a/src/app/component/homePage/search/search.component.css
+++ b/src/app/component/homePage/search/search.component.css
@@ -17,7 +17,7 @@
     margin-left: 8px;
 }
 .row.image{
-    background-image: url(../../../assets/katarheroimage.png);
+    background-image: url(../../../../assets/katarheroimage.png);
     height: 468px;
     margin-top: -75px;
 }
