--- a/src/app/item/my-request/my-request.component.html
+++ b/src/app/item/my-request/my-request.component.html
@@ -14,7 +14,7 @@
       </ng-container>
       <ng-container matColumnDef="status">
         <mat-header-cell *matHeaderCellDef> Status </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.status}} </mat-cell>
+        <mat-cell *matCellDef="let element"> {{element.status.name}} </mat-cell>
       </ng-container>
       <ng-container matColumnDef="task_type">
         <mat-header-cell *matHeaderCellDef> Task Type </mat-header-cell>
