--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,6 +15,15 @@
       <li>
         <a mat-button [routerLink]="['/createIncident']" routerLinkActive="mat-accent">{{ lables.createIncident }}</a>
       </li>
+      <li *ngIf="!userIsAuthenticated">
+        <a mat-button routerLink="auth/login" routerLinkActive="mat-accent">Login</a>
+      </li>
+      <li *ngIf="!userIsAuthenticated">
+        <a mat-button routerLink="auth/signup" routerLinkActive="mat-accent">Signup</a>
+      </li>
+      <li *ngIf="userIsAuthenticated"> 
+        <button mat-button (click)="onLogout()">Logout</button>
+      </li>
     </ul>
   </mat-toolbar>
   
