--- a/src/app/item/my-request/my-request.component.css
+++ b/src/app/item/my-request/my-request.component.css
@@ -1,13 +1,17 @@
 table {
     width: 100%;
   }
-  mat-row{
+  .mat-row{
     cursor: pointer;
   }
   /* issue in page size */
   .mat-paginator-page-size {
     display: flex;
     align-items: baseline;
-    margin-right: 8px;
     display: none;
+}
+mat-row:hover{
+  box-shadow: 0 5px 5px -3px rgba(0,0,0,.2),
+              0 8px 10px 1px rgba(0,0,0,.14), 
+              0 3px 14px 2px rgba(0,0,0,.12);
 }
