--- a/src/app/item/request-delails/request-delails.component.html
+++ b/src/app/item/request-delails/request-delails.component.html
@@ -6,7 +6,7 @@
     <mat-list-item role="listitem"><b>create :</b> {{requestDetail.create}}</mat-list-item>
     <mat-list-item role="listitem" *ngFor="let field of requestDetail.details | keyvalue"><b>{{field.key}} :</b> {{field.value}}</mat-list-item>
     </mat-list>
-    <mat-horizontal-stepper linear [selectedIndex]="requestDetail.status" #stepper>
+    <mat-horizontal-stepper linear [selectedIndex]="requestDetail.status.value" #stepper>
     <ng-container *ngFor="let status of statusRequest | enumToArray">
         <ng-template matStepperIcon="home">
                 <mat-icon>home</mat-icon>
