--- a/src/app/component/request/requestList/request-list.component.css
+++ b/src/app/component/request/requestList/request-list.component.css
@@ -15,3 +15,6 @@ mat-row:hover{
               0 8px 10px 1px rgba(0,0,0,.14), 
               0 3px 14px 2px rgba(0,0,0,.12);
 }
+.mat-table tbody, .mat-table tfoot, .mat-table thead, .mat-table-sticky, [mat-footer-row], [mat-header-row], [mat-row], mat-footer-row, mat-header-row, mat-row {
+   background: unset; 
+}
