--- a/src/app/component/request/requestDelails/request-delails.component.html
+++ b/src/app/component/request/requestDelails/request-delails.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <mat-list role="list">
     <mat-list-item role="listitem"><b>name :</b> {{requestDetail.name}}</mat-list-item>
-    <mat-list-item role="listitem"><b>number :</b> {{requestDetail.sys_id}}</mat-list-item>
+    <mat-list-item role="listitem"><b>number :</b> {{requestDetail.number}}</mat-list-item>
     <mat-list-item role="listitem"><b>description :</b>{{requestDetail.description}}</mat-list-item>
     <mat-list-item role="listitem"><b>create :</b> {{requestDetail.create}}</mat-list-item>
     <mat-list-item role="listitem" *ngFor="let field of requestDetail.details | keyvalue"><b>{{field.key}} :</b> {{field.value}}</mat-list-item>
