--- a/src/app/component/request/requestList/request-list.component.html
+++ b/src/app/component/request/requestList/request-list.component.html
@@ -9,17 +9,17 @@
         <mat-header-cell *matHeaderCellDef> Number </mat-header-cell>
         <mat-cell *matCellDef="let element"> {{element.number}} </mat-cell>
       </ng-container> 
-      <ng-container matColumnDef="name">
+      <!--<ng-container matColumnDef="name">
         <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.number}} </mat-cell>
-      </ng-container>   
+        <mat-cell *matCellDef="let element"> {{element.name} </mat-cell>
+      </ng-container>-->   
       <ng-container matColumnDef="description">
         <mat-header-cell *matHeaderCellDef> Description </mat-header-cell>
         <mat-cell *matCellDef="let element"> {{element.description}} </mat-cell>
       </ng-container>
       <ng-container matColumnDef="status">
         <mat-header-cell *matHeaderCellDef> Status </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.state}} </mat-cell>
+        <mat-cell *matCellDef="let element"> {{statusRequest[element.state]}} </mat-cell>
       </ng-container>
       <ng-container matColumnDef="task_type">
         <mat-header-cell *matHeaderCellDef> Task Type </mat-header-cell>
