--- a/src/app/component/request/requestDelails/request-delails.component.css
+++ b/src/app/component/request/requestDelails/request-delails.component.css
@@ -7,3 +7,13 @@
   max-width: 50%;
   margin-left: 25%;
   }
+  input[type=file]{
+    visibility: hidden;
+  }
+  .image-preview{
+    height: 5rem;
+    width: 1rem 0;
+  }
+  .image-preview img{
+    height: 100%;
+  }
