--- a/src/app/component/request/requestDelails/request-delails.component.html
+++ b/src/app/component/request/requestDelails/request-delails.component.html
@@ -15,4 +15,18 @@
                 </mat-step>
     </ng-container>
     </mat-horizontal-stepper>
+
+    <form [formGroup]="form" (submit)="sendComment()" >
+        <div>
+            <button mat-stroked-button type="button" (click)="filePicker.click()">Pick Image</button>
+            <input type="file" #filePicker (change)="onImagePicked($event)">
+          </div>
+          <div class="image-preview" *ngIf="imagePreview !== '' && imagePreview && form.get('image').valid">
+            <img [src]="imagePreview" [alt]="form.value.title">
+          </div>
+        <button
+          mat-raised-button
+          color="accent"
+          type="submit">Send comment</button>
+      </form>
 </div>
