--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,6 +1,6 @@
   <mat-toolbar color="primary">
     <span>
-      <a routerLink="/">Ktr - Application</a>
+      <a routerLink="/">Kt - Application</a>
     </span>
     <span class="spacer"></span>
     <ul>
