--- a/src/app/component/request/requestDelails/request-delails.component.css
+++ b/src/app/component/request/requestDelails/request-delails.component.css
@@ -17,3 +17,15 @@
   .image-preview img{
     height: 100%;
   }
+  .example-form {
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+  }
+  
+  .example-full-width {
+    width: 100%;
+  }
+  .mat-form-field-flex {
+    width: 400px !important;
+}
