--- a/src/app/component/request/requestDelails/request-delails.component.html
+++ b/src/app/component/request/requestDelails/request-delails.component.html
@@ -1,32 +1,50 @@
-<div class="row">
-    <mat-list role="list">
-    <mat-list-item role="listitem"><b>number :</b> {{requestDetail.number}}</mat-list-item>
-    <mat-list-item role="listitem"><b>description :</b>{{requestDetail.description}}</mat-list-item>
-    <mat-list-item role="listitem"><b>create :</b> {{requestDetail.sys_created_on}}</mat-list-item>
-    <mat-list-item role="listitem" *ngFor="let field of requestDetail.details | keyvalue"><b>{{field.key}} :</b> {{field.value}}</mat-list-item>
-    </mat-list>
-    <mat-horizontal-stepper linear [selectedIndex]="requestDetail.state" #stepper>
-    <ng-container *ngFor="let status of statusRequest | enumToArray">
-        <ng-template matStepperIcon="home">
-                <mat-icon>home</mat-icon>
-        </ng-template>
-        <mat-step [editable]="false">
-                <ng-template matStepLabel>{{status}}</ng-template>
-                </mat-step>
-    </ng-container>
-    </mat-horizontal-stepper>
-
-    <form [formGroup]="form" (submit)="sendComment()" >
-        <div>
-            <button mat-stroked-button type="button" (click)="filePicker.click()">Pick Image</button>
-            <input type="file" #filePicker (change)="onImagePicked($event)">
-          </div>
-          <div class="image-preview" *ngIf="imagePreview !== '' && imagePreview && form.get('image').valid">
-            <img [src]="imagePreview" [alt]="form.value.title">
-          </div>
-        <button
-          mat-raised-button
-          color="accent"
-          type="submit">Send comment</button>
-      </form>
-</div>
+<mat-grid-list cols="3" rowHeight="100px">
+        <mat-grid-tile [colspan]=2 [rowspan]=2 >
+                <form [formGroup]="form" (submit)="sendComment()" >
+                    <div>
+                        <button mat-stroked-button type="button" (click)="filePicker.click()">Pick Image</button>
+                        <input type="file" #filePicker (change)="onImagePicked($event)">
+                        <div class="image-preview" *ngIf="imagePreview !== '' && imagePreview && form.get('image').valid">
+                        <img [src]="imagePreview" [alt]="form.value.title">
+                        </div>  
+                        <br/>
+                        <!-- <p>
+                            <mat-form-field appearance="outline">
+                              <mat-label>Outline form field</mat-label>
+                              <input matInput placeholder="Placeholder">
+                              <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+                              <mat-hint>Hint</mat-hint>
+                            </mat-form-field>
+                          </p> -->
+                          <br/>
+                        <button
+                            mat-raised-button
+                            color="accent"
+                            type="submit">Send comment</button>
+                        </div>
+                    </form>
+                    </mat-grid-tile>
+                    <mat-grid-tile [colspan]=1 [rowspan]=2>
+                        <div class="row">
+                        <mat-list role="list">
+                        <mat-list-item role="listitem"><b>number :</b> {{requestDetail.number}}</mat-list-item>
+                        <mat-list-item role="listitem"><b>description :</b>{{requestDetail.description}}</mat-list-item>
+                        <mat-list-item role="listitem"><b>create :</b> {{requestDetail.sys_created_on}}</mat-list-item>
+                        <mat-list-item role="listitem" *ngFor="let field of requestDetail.details | keyvalue"><b>{{field.key}} :</b> {{field.value}}</mat-list-item>
+                        </mat-list>
+                        </div>
+                    </mat-grid-tile>
+                    <mat-grid-tile [colspan]=2 [rowspan]=1>
+                <mat-horizontal-stepper linear [selectedIndex]="requestDetail.state" #stepper>
+                        <ng-container *ngFor="let status of statusRequest | enumToArray">
+                            <ng-template matStepperIcon="home">
+                                    <mat-icon>home</mat-icon>
+                            </ng-template>
+                            <mat-step [editable]="false">
+                                    <ng-template matStepLabel>{{status}}</ng-template>
+                                    </mat-step>
+                        </ng-container>
+                    </mat-horizontal-stepper>
+                </mat-grid-tile>
+             
+</mat-grid-list>
